@@ -17,10 +17,16 @@
     <File name="./EcmaReader.cs" subtype="Code" buildaction="Compile" />
     <File name="./AssemblyInfo.cs" subtype="Code" buildaction="Compile" />
     <File name="../Schemas/monodoc-ecma.xsd" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="./Test" subtype="Directory" buildaction="Compile" />
+    <File name="./Test/TestEcmaReader.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Test.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Test/Examples" subtype="Directory" buildaction="Compile" />
+    <File name="./Test/Examples/Accel.xml" subtype="Code" buildaction="Nothing" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <ProjectReference type="Gac" localcopy="True" refto="System.Xml, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <ProjectReference type="Gac" localcopy="True" refto="nunit.framework, Version=2.2.9.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77" />
   </References>
   <Deployment.LinuxDeployData scriptName="ecmautils" />
 </Project>
